[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/Main.gd" type="Script" id=1]
[ext_resource path="res://game/character/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/character/enemy/MobSpawnPath.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/HUD/HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

[node name="TimerStartFreeze" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="TimerSpawnMob" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="TimerScoreIncrement" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="MobSpawnPath" parent="." index="4" instance=ExtResource( 3 )]

[node name="HUD" parent="." index="5" instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]

[connection signal="timeout" from="TimerStartFreeze" to="." method="_on_TimerStartFreeze_timeout"]

[connection signal="timeout" from="TimerSpawnMob" to="." method="_on_TimerSpawnMob_timeout"]

[connection signal="timeout" from="TimerScoreIncrement" to="." method="_on_TimerScoreIncrement_timeout"]

[connection signal="start_pressed" from="HUD" to="." method="_on_HUD_start_pressed"]


